# wgpu-ml

./: .gitignore  Cargo.toml  LICENSE.md  README.md  bsconfig.json  dune  dune-project  package-lock.json  package.json
bs/: bsconfig.json  package.json
js/: Cargo.toml  Stubs.re
native/: Cargo.toml  Stubs.re  lib.rs
src/: WebGPU.re  WebGPU.rei  dune
test/: dune
