[package]
name = "wgpu"
version = "0.1.0"
authors = ["David Bernado <bernadda@whitman.edu>"]
edition = "2018"

[lib]
path = "native/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
ocaml = "0.16"
wgpu = "0.6"
futures = "*"

# Or use the development version:
# ocaml = {git = "git://github.com/zshipko/ocaml-rs"}
